Recorrido Registro Socio (activities e intents)

--- a/app/src/main/res/layout/activity_registrar_socio.xml
+++ b/app/src/main/res/layout/activity_registrar_socio.xml
@@ -24,13 +24,13 @@
         </FrameLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="REGISTRAR SOCIO"
                 android:textSize="40dp"
@@ -129,7 +129,7 @@
                 android:background="@drawable/edittext_fondoblanco"/>
 
             <Button
-                android:id="@+id/btnRegistrar"
+                android:id="@+id/btnRegistrarSocio"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
