--- a/app/src/main/res/layout/activity_asignar_actividad.xml
+++ b/app/src/main/res/layout/activity_asignar_actividad.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_degradado"
-    android:padding="24dp"
-    tools:context=".AsignarActividadActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:background="@color/yellow"
+        android:padding="20dp">
 
         <!-- Título -->
         <TextView
@@ -20,67 +19,107 @@
             android:text="Asignar actividades al cliente"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#000000"
-            android:layout_marginBottom="16dp"/>
+            android:textColor="@color/black"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal" />
 
         <!-- Lista de actividades -->
-        <LinearLayout
+        <RadioGroup
+            android:id="@+id/grupoActividades"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#E0E0E0"
-            android:padding="8dp">
+            android:orientation="vertical">
 
-            <RadioGroup
-                android:id="@+id/grupoActividades"
+            <RadioButton
+                android:id="@+id/rbActividad1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="Actividad 1"
+                android:textColor="@color/black"/>
 
-                <RadioButton android:text="Actividad 1" android:id="@+id/act1" />
-                <RadioButton android:text="Actividad 2" android:id="@+id/act2" />
-                <RadioButton android:text="Actividad 3" android:id="@+id/act3" />
-                <RadioButton android:text="Actividad 4" android:id="@+id/act4" />
-                <RadioButton android:text="Actividad 5" android:id="@+id/act5" />
-                <RadioButton android:text="Actividad 6" android:id="@+id/act6" />
-                <RadioButton android:text="Actividad 7" android:id="@+id/act7" />
-                <RadioButton android:text="Actividad 8" android:id="@+id/act8" />
-                <RadioButton android:text="Actividad 9" android:id="@+id/act9" />
-                <RadioButton android:text="Actividad 10" android:id="@+id/act10" />
-            </RadioGroup>
-        </LinearLayout>
+            <RadioButton
+                android:id="@+id/rbActividad2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 2"
+                android:textColor="@color/black"/>
 
-        <!-- Campo de texto -->
+            <RadioButton
+                android:id="@+id/rbActividad3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 3"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 4"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 5"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 6"
+                android:textColor="@color/black"/>
+        </RadioGroup>
+
+        <!-- Campo de DNI -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DNI socio/no socio:"
-            android:textColor="#000000"
-            android:layout_marginTop="16dp"/>
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"/>
 
         <EditText
-            android:id="@+id/inputDni"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/etDni"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:hint="Ej: 12345678"
-            android:inputType="number"
-            android:background="#FFFFFF"
-            android:padding="8dp"
-            android:layout_marginBottom="16dp"/>
-
-        <!-- Botón -->
-        <Button
-            android:id="@+id/btnAsignar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Asignar actividad"
-            android:textAllCaps="false"
-            android:backgroundTint="#000000"
-            android:textColor="#FFFFFF"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
+            android:background="@drawable/edittext_fondo"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/boton_redondeado_negro"/>
+            android:padding="10dp"
+            android:inputType="number"/>
+
+        <!-- Botones -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="30dp">
+
+            <Button
+                android:id="@+id/btnAsignar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Asignar actividad"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/white"
+                android:layout_marginEnd="20dp"/>
+
+            <Button
+                android:id="@+id/btnPagar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pagar actividad"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
