--- a/app/src/main/res/layout/activity_asignar_actividad_guardado.xml
+++ b/app/src/main/res/layout/activity_asignar_actividad_guardado.xml
@@ -1,47 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="24dp"
-    android:background="@drawable/bg_degradado"
-    tools:context=".AsignarActividadGuardadoActivity">
+    android:layout_height="match_parent">
 
-    <!-- Mensaje principal -->
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Actividad asignada correctamente"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_marginBottom="40dp"/>
+        android:orientation="vertical"
+        android:background="@color/yellow"
+        android:padding="20dp">
 
-    <!-- Botón Asignar nueva actividad -->
-    <Button
-        android:id="@+id/btnAsignarNueva"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Asignar actividad"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/boton_redondeado_negro"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:layout_marginBottom="20dp"/>
+        <!-- Título -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Asignar actividades al cliente"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal" />
 
-    <!-- Botón Pagar actividad -->
-    <Button
-        android:id="@+id/btnPagar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pagar actividad"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/boton_redondeado_negro"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"/>
+        <!-- Lista de actividades (igual que la anterior, pero solo visual) -->
+        <RadioGroup
+            android:id="@+id/grupoActividadesGuardadas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:enabled="false">
 
-</LinearLayout>
+            <RadioButton
+                android:id="@+id/rbActividad1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 1"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 2"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 3"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 4"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 5"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbActividad6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actividad 6"
+                android:textColor="@color/black"/>
+        </RadioGroup>
+
+        <!-- Botones -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="40dp">
+
+            <Button
+                android:id="@+id/btnAsignarOtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Asignar actividad"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/white"
+                android:layout_marginEnd="20dp"/>
+
+            <Button
+                android:id="@+id/btnPagarActividad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pagar actividad"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
