--- a/app/src/main/res/layout/activity_pagar.xml
+++ b/app/src/main/res/layout/activity_pagar.xml
@@ -1,162 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
-    tools:context=".Pagar">
+    android:orientation="vertical"
+    android:background="@color/yellow">
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="310dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="507dp"
-        android:text="Seleccionar metodo de pago"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:typeface="sans"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="283dp"
-        android:layout_marginBottom="656dp"
-        android:backgroundTint="#160606"
-        android:text="Volver"
-        android:textAllCaps="false"
-        android:textColor="#FFFEFE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.102" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="310dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="556dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="103dp"
-        android:text="Indique monto a abonar"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:typeface="sans"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="204dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginBottom="596dp"
-        android:background="#0B0B0B"
-        android:text="Pagar Actividad"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="#F6F3F3"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:typeface="sans"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.225" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="272dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="574dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="92dp"
-        android:background="#FDFDFD"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textColorLink="#070707"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64" />
-
-    <Button
-        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="640dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="28dp"
-        android:backgroundTint="#160606"
+        android:text="← Volver"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        android:layout_marginBottom="10dp"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="110dp"
+            android:text="PAGAR ACTIVIDAD"
+            android:textColor="@android:color/white"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/edittext_fondonegro"/>
+
+    </FrameLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nombre de Actividad "
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal" />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seleccione modo de pago"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="8dp">
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Efectivo"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tarjeta / Transferencia"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Indique monto a abonar:"
+            android:textSize="18sp"
+            android:layout_marginTop="24dp"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Ingrese monto"
+            android:inputType="numberDecimal"
+            android:background="@android:drawable/edit_text"
+            android:padding="12dp"
+            android:layout_marginTop="8dp"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnPagar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Pagar"
-        android:textAllCaps="false"
-        android:textColor="#FFFEFE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.586"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.771" />
+        android:backgroundTint="@android:color/black"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="32dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="12dp"/>
 
-    <RadioGroup
-        android:layout_width="323dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="151dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="195dp"
-        android:background="#B6AFAF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <RadioButton
-            android:id="@+id/radioButton12"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:background="#F6F3F3"
-            android:backgroundTint="#FDFBFB"
-            android:buttonTint="#090909"
-            android:text="Efectivo" />
-
-        <RadioButton
-            android:id="@+id/radioButton13"
-            android:layout_width="match_parent"
-            android:layout_height="78dp"
-            android:background="#F6F3F3"
-            android:backgroundTint="#FDFBFB"
-            android:buttonTint="#090909"
-            android:text="Tarjeta/Transferencia" />
-
-    </RadioGroup>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
